@@ -155,9 +155,18 @@
 		</RegExp>
 	</GetDetails>
 	<ParseFallbackTMDBTitle dest="5">
-		<RegExp input="$$2" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<RegExp input="$$1" output="&lt;title&gt;\1&lt;/title&gt;" dest="2">
+		<RegExp input="$$10" output="&lt;details&gt;&lt;title&gt;\1&lt;/title&gt;&lt;/details&gt;" dest="5">
+			<RegExp input="$$1" output="\1" dest="11">
+				<expression clear="yes" fixchars="1">&quot;original_title&quot;:&quot;([^&quot;]*)</expression>
+			</RegExp>
+			<RegExp input="$$11" output="\1" dest="10">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="11">
 				<expression fixchars="1">&quot;title&quot;:&quot;([^&quot;]*)</expression>
+			</RegExp>
+			<RegExp input="$$11" output="\1" dest="10">
+				<expression>(.+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
